# ArchiveGramBot

./: .gitignore  Cargo.toml  README.md  config-sample.toml
src/: handlers.rs  lib.rs  main.rs  operations.rs  utils.rs
systemd/: archivegrambot.service
templates/: base.html  content.html
