[package]
name = "archivegrambot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
log2 = "0.1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1", default-features = false }
toml = "0.5.2"
